Bug on mobile with desktop search

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -71,7 +71,7 @@
 
 section.desktop-search{
     position: fixed;
-    top: -100%;
+    top: -100vh;
     left: 0;
     width: 100vw;
     height: 100vh;
